# corona_desktop

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  corona.py  corona_bg.pyw  install.bat  pyproject.toml  requirements.txt  run.bat
.github/workflows/: claude-code-review.yml  claude.yml
