[project]
name = "corona-desktop"
version = "1.0.0"
description = "Live COVID-19 statistics overlay for Windows desktop"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.13"
keywords = ["covid", "coronavirus", "desktop", "overlay", "windows"]
dependencies = [
    "beautifulsoup4>=4.13",
    "pywin32>=310",
    "lxml>=5.3",
]

[project.urls]
Homepage = "https://github.com/prmsregmi/corona_desktop"
Repository = "https://github.com/prmsregmi/corona_desktop"

[project.scripts]
corona-desktop = "corona:main"
corona-desktop-bg = "corona_bg:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = ["corona.py", "corona_bg.pyw"]

[tool.uv]
dev-dependencies = []
